objects/FieloEE__Agreement__c.object
<CustomObject>
    <customHelpPage>FieloEE__AgreementHelpBackEnd</customHelpPage>
    <description>Terms and Conditions that members must accept to participate in one of your Fielo programs. You can save different agreements, but only one will be active for each program.</description>
    <fields>
        <fullName>FieloEE__Agreement__c</fullName>
        <description>The actual content of this agreement.</description>
        <label>Agreement</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this agreement belongs.</description>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <description>This agreement status. You can have only one active agreement per program.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>FieloEE__All_Agreements</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Program__c</columns>
        <columns>FieloEE__Agreement__c</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Agreements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>